style: heavily reduce brightness/visibility of right whirl

--- a/index.html
+++ b/index.html
@@ -311,13 +311,13 @@
             right: clamp(-200px, -20vw, -100px);
             top: 50%;
             transform: translateY(calc(-50% + var(--whirl-offset-right, 0px)));
-            width: clamp(500px, 70vw, 1000px);
-            height: clamp(500px, 70vw, 1000px);
-            background: radial-gradient(circle, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0.06) 50%, transparent 80%);
+            width: clamp(480px, 60vw, 900px);
+            height: clamp(480px, 60vw, 900px);
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.08) 0%, rgba(255, 255, 255, 0.03) 50%, transparent 80%);
             border-radius: 50%;
-            filter: blur(120px);
-            opacity: 0.6;
-            mix-blend-mode: screen;
+            filter: blur(160px);
+            opacity: 0.18;
+            mix-blend-mode: normal;
             z-index: 0;
         }
         
