--- a/index.html
+++ b/index.html
@@ -298,9 +298,21 @@
             transform: translateY(calc(-50% + var(--whirl-offset-left, 0px)));
             width: clamp(550px, 75vw, 1100px);
             height: clamp(550px, 75vw, 1100px);
-            background: radial-gradient(circle, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.16) 50%, transparent 80%);
+            background:
+                radial-gradient(circle at 50% 50%,
+                    rgba(255, 255, 255, 0.38) 0%,
+                    rgba(255, 255, 255, 0.20) 45%,
+                    rgba(255, 255, 255, 0.12) 70%,
+                    rgba(255, 255, 255, 0.06) 85%,
+                    rgba(255, 255, 255, 0.00) 100%
+                ),
+                radial-gradient(circle at 50% 50%,
+                    rgba(255, 255, 255, 0.06) 0%,
+                    rgba(255, 255, 255, 0.04) 60%,
+                    rgba(255, 255, 255, 0.00) 100%
+                );
             border-radius: 50%;
-            filter: blur(120px);
+            filter: blur(130px);
             opacity: 0.9;
             mix-blend-mode: screen;
             z-index: 0;
