--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             height: auto;
             min-height: 100%;
             z-index: -2;
-            mask: linear-gradient(to bottom, black 0%, rgba(0,0,0,0.3) 50%, transparent 100%);
+            mask: linear-gradient(to bottom, black 0%, rgba(0,0,0,0.5) 60%, transparent 100%);
             pointer-events: none;
             overflow: hidden;
         }
@@ -336,12 +336,15 @@
             position: absolute;
             width: 24px;
             height: 24px;
-            background: #181A1B;
+            background: #1A1D1F;
             border-radius: 3px;
+            opacity: 0.9;
+            box-shadow: 0 0 6px rgba(255,255,255,0.04);
         }
         
         .hero .grid-box.bright {
-            background: #262829;
+            background: #2E3437;
+            box-shadow: 0 0 10px rgba(255,255,255,0.06);
         }
         
         /* Main container */
