--- a/index.html
+++ b/index.html
@@ -317,6 +317,14 @@
             mix-blend-mode: screen;
             z-index: 0;
         }
+
+        /* Slightly reduce whirl size on large screens */
+        @media (min-width: 1440px) {
+            .whirl-left { transform: translateY(-50%) scale(0.92); }
+        }
+        @media (min-width: 1920px) {
+            .whirl-left { transform: translateY(-50%) scale(0.85); }
+        }
         
         /* Grid - Only for hero section */
         .hero .grid {
