--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
 
         /* Slightly reduce whirl size on large screens */
         @media (min-width: 1440px) {
-            .whirl-left { transform: translateY(-50%) scale(0.92); }
+            .whirl-left { transform: translateY(-50%) scale(0.92); opacity: 0.7; }
         }
         @media (min-width: 1920px) {
-            .whirl-left { transform: translateY(-50%) scale(0.85); }
+            .whirl-left { transform: translateY(-50%) scale(0.85); opacity: 0.55; }
         }
         
         /* Grid - Only for hero section */
